# ploc

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml  version.yml
docs/superpowers/plans/: 2026-05-23-ploc.md
docs/superpowers/specs/: 2026-05-23-ploc-design.md
share/man/man1/: ploc.1
src/: lib.rs  main.rs  render.rs  scan.rs
tests/: cli.rs  repo_assets.rs
