[package]
name = "ploc"
version = "0.3.1"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.1"
tokei = "12.1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
